# cli-portfolio

./: .gitignore
.portfolio_data/: Portfolio.education.json  Portfolio.experience.json  Portfolio.home.json  Portfolio.skills.json
android-app-backend/portfolio-editor-backend/: build.gradle  settings.gradle
android-app/portfolioeditor/: gradle.properties  settings.gradle.kts
android-app/portfolioeditor/app/: build.gradle.kts
android-app/portfolioeditor/gradle/: libs.versions.toml
android-app/portfolioeditor/gradle/wrapper/: gradle-wrapper.properties
backend/: config.py  db.py  main.py  pyproject.toml
backend/cache/: cache.py  redis_client.py
backend/models/: contact.py  education.py  experience.py  home.py  project.py  skill.py
backend/routers/: admin.py  contact.py  education.py  experience.py  home.py  projects.py  skills.py
backend/seed/: education.py  experience.py  home.py  skills.py
backend/services/: email_service.py  github_service.py  mongo_service.py
frontend/: .env.example  package-lock.json  package.json
frontend/public/: ascii-art.txt
frontend/src/: App.css  App.tsx  index.css  portfolioTypes.ts
frontend/src/components/: BvimLayout.tsx  BvimView.tsx  TerminalView.tsx  sections.ts
frontend/src/components/bvim/: BvimView.module.css  BvimView.tsx  constants.ts  helpers.ts  (+1 more)
frontend/src/pages/: Contact.tsx  Education.tsx  Experience.tsx  Home.tsx  Projects.tsx  Skills.tsx
frontend/src/router/: AppRouter.tsx
frontend/src/styles/: bvim.css  terminal.css
frontend/src/themes/: portfolioTypes.ts
frontend/src/utils/: api.ts
(+133 files in other folders)
